--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<body>
 		<div id="loginForm">
 			<img src="./login.png" alt="Login Image" />
-			<form method="GET" action="./validate.php">
+			<form method="get" action="./validate.php">
 				<label for="username">Username</label>
 				<input type="text" name="username" id="username" />	
 				
